[gd_scene load_steps=10 format=3 uid="uid://cdthlxtgkleke"]

[ext_resource type="Script" path="res://Skills/Scripts/Item.gd" id="1_1nito"]
[ext_resource type="Texture2D" uid="uid://bvowbij7bann8" path="res://Items/Icons/generic_mag_ranged.png" id="2_ebcsi"]
[ext_resource type="Script" path="res://Items/ItemStatComponent.gd" id="3_8j7uw"]
[ext_resource type="Resource" uid="uid://v308g3xph4e" path="res://Units/Stats/STAT_SpAttack.tres" id="4_afipa"]
[ext_resource type="Script" path="res://Units/Stats/Scripts/StatDef.gd" id="5_o2hpc"]
[ext_resource type="Script" path="res://Skills/DamageData.gd" id="6_yy0ql"]
[ext_resource type="Resource" uid="uid://bxaifmwbwgl7i" path="res://Units/Stats/STAT_SpDefense.tres" id="7_rsgqm"]
[ext_resource type="Script" path="res://Skills/SkillTargetingComponent.gd" id="8_ooa6t"]

[sub_resource type="Resource" id="Resource_kdt0t"]
script = ExtResource("5_o2hpc")
Template = ExtResource("4_afipa")
Value = 5

[node name="GenericMagRanged" type="Node2D" node_paths=PackedStringArray("TargetingData", "SkillDamageData", "StatData")]
script = ExtResource("1_1nito")
loc_displayName = "TEMP MAG RANGED"
icon = ExtResource("2_ebcsi")
TargetingData = NodePath("SkillTargetingData")
SkillDamageData = NodePath("DamageComponent")
StatData = NodePath("StatComponent")

[node name="StatComponent" type="Node2D" parent="."]
script = ExtResource("3_8j7uw")
BaseAccuracy = 75
GrantedStats = Array[ExtResource("5_o2hpc")]([SubResource("Resource_kdt0t")])

[node name="DamageComponent" type="Node2D" parent="."]
script = ExtResource("6_yy0ql")
AgressiveStat = ExtResource("4_afipa")
DefensiveStat = ExtResource("7_rsgqm")

[node name="SkillTargetingData" type="Node2D" parent="."]
script = ExtResource("8_ooa6t")
TargetRange = Vector2i(1, 2)
