[gd_scene load_steps=6 format=3 uid="uid://bwhjl0u68k5i0"]

[ext_resource type="Script" path="res://Skills/Scripts/Item.gd" id="1_t4ki0"]
[ext_resource type="Script" path="res://Skills/SkillTargetingComponent.gd" id="2_bw1eb"]
[ext_resource type="Script" path="res://Skills/DamageData.gd" id="3_0ktgm"]
[ext_resource type="Resource" uid="uid://v308g3xph4e" path="res://Units/Stats/STAT_SpAttack.tres" id="4_7l1f1"]
[ext_resource type="Resource" uid="uid://bxaifmwbwgl7i" path="res://Units/Stats/STAT_SpDefense.tres" id="5_aclmr"]

[node name="SK_DarkMage_Auto" type="Node2D" node_paths=PackedStringArray("TargetingData", "DamageData")]
script = ExtResource("1_t4ki0")
loc_displayName = "Shoot"
TargetingData = NodePath("TargetingComponent")
DamageData = NodePath("DamageComponent")

[node name="TargetingComponent" type="Node2D" parent="."]
script = ExtResource("2_bw1eb")
TargetRange = Vector2i(1, 2)

[node name="DamageComponent" type="Node2D" parent="."]
script = ExtResource("3_0ktgm")
AgressiveStat = ExtResource("4_7l1f1")
DefensiveStat = ExtResource("5_aclmr")
